ambassador/tests/002-tls-module-1/gold.intermediate.json
{
    "envoy_config": {
        "admin": [
            {
                "_source": "ambassador.yaml.1",
                "admin_port": 4242
            }
        ],
        "clusters": [
            {
                "_referenced_by": [
                    "ambassador.yaml.1"
                ],
                "_service": "127.0.0.1:8877",
                "_source": "ambassador.yaml.1",
                "lb_type": "round_robin",
                "name": "cluster_127_0_0_1_8877",
                "type": "strict_dns",
                "urls": [
                    "tcp://127.0.0.1:8877"
                ]
            },
            {
                "_referenced_by": [
                    "mapping-qotm.yaml.1"
                ],
                "_service": "qotm",
                "_source": "mapping-qotm.yaml.1",
                "lb_type": "round_robin",
                "name": "cluster_qotm",
                "type": "strict_dns",
                "urls": [
                    "tcp://qotm:80"
                ]
            }
        ],
        "filters": [
            {
                "_source": "--internal--",
                "config": {},
                "name": "cors"
            },
            {
                "_source": "--internal--",
                "config": {},
                "name": "router",
                "type": "decoder"
            }
        ],
        "listeners": [
            {
                "_source": "ambassador.yaml.1",
                "require_tls": false,
                "service_port": 443,
                "tls": {
                    "_source": "tls.yaml.1",
                    "cacert_chain_file": "/etc/ambassador-config/ca_cert_chain/tls.crt",
                    "cert_chain_file": "/etc/ambassador-config/certs/tls.crt",
                    "cert_required": true,
                    "private_key_file": "/etc/ambassador-config/certs/tls.key"
                },
                "use_proxy_proto": false
            }
        ],
        "routes": [
            {
                "_group_id": "0a42187b7b3d283e0079ddab01825e1c71fad9f6",
                "_method": "GET",
                "_referenced_by": [
                    "ambassador.yaml.1"
                ],
                "_source": "ambassador.yaml.1",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/check_ready",
                "prefix_rewrite": "/ambassador/v0/check_ready"
            },
            {
                "_group_id": "9fda39523fe03a3c6aac9c21098375764ec0822d",
                "_method": "GET",
                "_referenced_by": [
                    "mapping-qotm.yaml.1"
                ],
                "_source": "mapping-qotm.yaml.1",
                "clusters": [
                    {
                        "name": "cluster_qotm",
                        "weight": 100.0
                    }
                ],
                "prefix": "/qotm/",
                "prefix_rewrite": "/"
            },
            {
                "_group_id": "b69eeb747b38f5e5fd3955d044ea7797d67d024f",
                "_method": "GET",
                "_referenced_by": [
                    "ambassador.yaml.1"
                ],
                "_source": "ambassador.yaml.1",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/",
                "prefix_rewrite": "/ambassador/v0/"
            }
        ]
    },
    "source_map": {
        "--internal--": {
            "--internal--": true
        },
        "ambassador.yaml": {
            "ambassador.yaml.1": true
        },
        "mapping-qotm.yaml": {
            "mapping-qotm.yaml.1": true
        },
        "tls.yaml": {
            "tls.yaml.1": true
        }
    },
    "sources": {
        "--diagnostics--": {
            "_source": "--diagnostics--",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "filename": "--diagnostics--",
            "index": 0,
            "kind": "diagnostics",
            "name": "Ambassador Diagnostics",
            "version": "v0"
        },
        "--internal--": {
            "_source": "--internal--",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "filename": "--internal--",
            "index": 0,
            "kind": "Internal",
            "name": "Ambassador Internals",
            "version": "v0"
        },
        "ambassador.yaml.1": {
            "_source": "ambassador.yaml",
            "filename": "ambassador.yaml",
            "index": 1,
            "kind": "Module",
            "name": "ambassador",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nconfig:\n  admin_port: 4242\n  liveness_probe:\n    enabled: false\nkind: Module\nname: ambassador\n"
        },
        "mapping-qotm.yaml.1": {
            "_source": "mapping-qotm.yaml",
            "filename": "mapping-qotm.yaml",
            "index": 1,
            "kind": "Mapping",
            "name": "qotm_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: Mapping\nname: qotm_mapping\nprefix: /qotm/\nservice: qotm\n"
        },
        "tls.yaml.1": {
            "_source": "tls.yaml",
            "filename": "tls.yaml",
            "index": 1,
            "kind": "Module",
            "name": "tls",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nconfig:\n  client:\n    cacert_chain_file: /etc/ambassador-config/ca_cert_chain/tls.crt\n    cert_required: true\n    enabled: True,\n  server:\n    cert_chain_file: /etc/ambassador-config/certs/tls.crt\n    enabled: true\n    private_key_file: /etc/ambassador-config/certs/tls.key\nkind: Module\nname: tls\n"
        }
    }
}
