ambassador/tests/002-tls-module-1/gold.json
{
    "admin":{
        "access_log_path":"/tmp/admin_access_log",
        "address":"tcp://127.0.0.1:4242"
    },
    "cluster_manager":{
        "clusters":[
            {
                "connect_timeout_ms":3000,
                "hosts":[
                    {
                        "url":"tcp://127.0.0.1:8877"
                    }
                ],
                "lb_type":"round_robin",
                "name":"cluster_127_0_0_1_8877",
                "type":"strict_dns"
            },
            {
                "connect_timeout_ms":3000,
                "hosts":[
                    {
                        "url":"tcp://qotm:80"
                    }
                ],
                "lb_type":"round_robin",
                "name":"cluster_qotm",
                "type":"strict_dns"
            }
        ]
    },
    "listeners":[
        {
            "address":"tcp://0.0.0.0:443",
            "filters":[
                {
                    "config":{
                        "access_log":[
                            {
                                "path":"/tmp/access_log"
                            }
                        ],
                        "codec_type":"auto",
                        "filters":[
                            {
                                "config":{},
                                "name":"router",
                                "type":"decoder"
                            }
                        ],
                        "route_config":{
                            "virtual_hosts":[
                                {
                                    "domains":[
                                        "*"
                                    ],
                                    "name":"backend",
                                    "routes":[
                                        {
                                            "prefix":"/ambassador/v0/check_ready",
                                            "prefix_rewrite":"/ambassador/v0/check_ready",
                                            "timeout_ms":10000,
                                            "weighted_clusters":{
                                                "clusters":[
                                                    {
                                                        "name":"cluster_127_0_0_1_8877",
                                                        "weight":100.0
                                                    }
                                                ]
                                            }
                                        },
                                        {
                                            "prefix":"/ambassador/v0/",
                                            "prefix_rewrite":"/ambassador/v0/",
                                            "timeout_ms":10000,
                                            "weighted_clusters":{
                                                "clusters":[
                                                    {
                                                        "name":"cluster_127_0_0_1_8877",
                                                        "weight":100.0
                                                    }
                                                ]
                                            }
                                        },
                                        {
                                            "prefix":"/qotm/",
                                            "prefix_rewrite":"/",
                                            "timeout_ms":10000,
                                            "weighted_clusters":{
                                                "clusters":[
                                                    {
                                                        "name":"cluster_qotm",
                                                        "weight":100.0
                                                    }
                                                ]
                                            }
                                        }
                                    ]
                                }
                            ]
                        },
                        "stat_prefix":"ingress_http"
                    },
                    "name":"http_connection_manager",
                    "type":"read"
                }
            ],
            "ssl_context":{
                "ca_cert_file":"/etc/ambassador-config/ca_cert_chain/tls.crt",
                "cert_chain_file":"/etc/ambassador-config/certs/tls.crt",
                "private_key_file":"/etc/ambassador-config/certs/tls.key",
                "require_client_certificate":true
            }
        }
    ],
    "stats_flush_interval_ms":1000,
    "statsd_udp_ip_address":"127.0.0.1:8125"
}
